--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_mod.html
@@ -168,6 +168,19 @@
 										<label for="z33" class="wd-145"><span></span>사진</label>
 									</td>
 								</tr>
+								<tr>
+									<th><span class="my-red">공개여부</span></th>
+									<td>
+										<div class="radio-2">
+											<!-- 오픈 기본 값 -->
+											<input type="hidden" name="workOpenYnDv" id="workOpenYnDv" th:value="${result.workOpenYn}">
+											<input type="radio" id="x1" name="workOpenYn" class="workOpenYn" value="Y" th:checked="${result.workOpenYn eq 'Y'}">
+											<label for="x1" class="wd-145"><span></span>공개</label>
+											<input type="radio" id="x2" name="workOpenYn" class="workOpenYn" value="N" th:checked="${result.workOpenYn eq 'N'}" th:onclick="'dealWorkCount(' + ${result.workSq} + ');'">
+											<label for="x2"><span></span>비공개</label>
+										</div>
+									</td>
+								</tr>
 							</table>
 						</div>
 					</div>
@@ -738,6 +751,9 @@ function collectionReg(){
 		result.workIntrdc = $("#workIntrdc").val();
 		result.keywrd = $("#keywrd").val();
 		//result.workLake = $("#workLake").val();
+		
+		//공개여부
+		result.workOpenYn = $('input[name=workOpenYn]:checked').val();
 		
 		const formData = new FormData();
 		//작품 대표 사진
