--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -170,9 +170,9 @@ function myCollectionList(){
 					html += '			<h4>입찰가 : '+ formatComma(result[i].maxBidPrc) +'</h4>';	
 				} */
 				
-				html += '		</div>';
+				html += '</div>';
 				
-				html += '</div>'
+				html += '</div>';
 				
 				html += '<div class="item-body">';
 				
@@ -211,9 +211,9 @@ function myCollectionList(){
  				html += '			'+ result[i].dealRemainingDay +'일 '+ result[i].dealRemainingHour +'시 '+ result[i].dealRemainingMin +'분 '+ result[i].dealRemainingSec +'초';
  				html += '			</p>'; */
  				
- 				html += '<h4>- <a href="javascript:myWorkMod('+result[i].workSq+')">작품수정</a></h4>'
- 				html += '<h4>- <a href="javascript:workDetailMove('+result[i].workSq+')">상세보기</a></h4>'
- 				html += '</div>'	
+ 				html += '<h4>- <a href="javascript:myWorkMod('+result[i].workSq+')">작품수정</a></h4>';
+ 				html += '<h4>- <a href="javascript:workDetailMove('+result[i].workSq+')">상세보기</a></h4>';
+ 				html += '</div>';
 					
 					
 				
