--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
@@ -202,9 +202,11 @@
 									<th><span class="my-red">공개여부</span></th>
 									<td>
 										<div class="radio-2">
-											<input type="radio" id="x1" name="useYn" value="Y" >
+											<!-- 오픈 기본 값 -->
+											<input type="hidden" name="workOpenYnDv" id="workOpenYnDv" th:value="${result.workOpenYn}">
+											<input type="radio" id="x1" name="workOpenYn" class="workOpenYn" value="Y" th:checked="${result.workOpenYn eq 'Y'}">
 											<label for="x1" class="wd-145"><span></span>공개</label>
-											<input type="radio" id="x2" name="useYn" value="N" >
+											<input type="radio" id="x2" name="workOpenYn" class="workOpenYn" value="N" th:checked="${result.workOpenYn eq 'N'}" th:onclick="'dealWorkCount(' + ${result.workSq} + ');'">
 											<label for="x2"><span></span>비공개</label>
 										</div>
 									</td>
@@ -721,6 +723,8 @@ function myWorkReg(){
 		result.workVideoUrl = $("#workVideoUrl").val();
 		result.workIntrdc = $("#workIntrdc").val();
 		//result.workLake = $("#workLake").val();
+		//공개여부
+		result.workOpenYn = $('input[name=workOpenYn]:checked').val();
 		
 		const formData = new FormData();
 		//작품 대표 사진
@@ -1132,6 +1136,37 @@ if (jQuery(window).width() > 0) {
     };
 
 }); */
+
+//나의작품 / 소장품 거래등록 확인
+function dealWorkCount(workSq){
+	
+	var workOpenYnDv = $("#workOpenYnDv").val();
+	
+	console.log("workOpenYnDv :"+workOpenYnDv);
+	
+ 	$.ajax({
+         type: "post",
+         url: "/mypage/dealWorkCountData",
+         data:{
+        	 workSq : workSq
+ 		},
+         success: function(dealWorkCount) {
+         	
+        	if(dealWorkCount == 1) {
+        		
+        		alert("거래중인 미술품은 비공개로 수정될 수 없습니다.");
+        		
+        		$(".workOpenYn:input[value='Y']").prop("checked", true);
+        		
+        	}
+        	 
+        	
+         },           
+         error: function(error) {
+             console.log("오류 발생" + error);
+         }
+ 	});
+ }
  
  
  
