--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -133,13 +133,13 @@ function myWorkList(){
 			//경매 - 겨래진행중
 			if(result[i].dealTypCd == "A" && result[i].dealSttsCd == "TP"){
 				
-				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" onclick="biddingMove('+result[i].workSq+')">';
+				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" >';
 				html += '<div>';
 				html += '<div class="item-div-img active-on">';
 				//작품 이미지
 				//html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
-				html += '		<div class="item-ho" style="cursor:pointer">';
+				html += '		<div class="item-ho" style="cursor:pointer" onclick="biddingMove('+result[i].workSq+')">';
 				html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
  				html += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
  				html += '			<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
@@ -185,8 +185,9 @@ function myWorkList(){
 					} else {
 						html += '<h4>입찰가 0 KRW</h4>';
 					}
- 			}
-				
+ 			     }
+				html += '<h4>- <a href="javascript:myWorkMod('+result[i].workSq+')">작품수정</a></h4>';
+ 				html += '<h4>- <a href="javascript:workDetailMove('+result[i].workSq+')">상세보기</a></h4>';
 				html += '</div>'
 				
 				html += '</div>';
@@ -207,11 +208,11 @@ function myWorkList(){
 			//판매 - 거래진행중
 			if(result[i].dealTypCd == "S" && result[i].dealSttsCd == "TP"){
 				
-				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" onclick="biddingMove('+result[i].workSq+')">';
+				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" >';
 				html += '<div>';
 				//작품 이미지
-				html += '<div class="item-div-img sale-on" style="cursor:pointer">';
-				//html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
+				html += '<div class="item-div-img sale-on" style="cursor:pointer" onclick="biddingMove('+result[i].workSq+')">';
+				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
 	 			html += '			<h3>판매중</h3>';
 	 			html += '				<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
@@ -223,9 +224,9 @@ function myWorkList(){
 				html += '<div class="uesr-s">';
 				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
  				html += '<img src="resources/img/de/ues-icon.png"/>';
- 			}else{
+ 				}else{
  				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
- 			}
+ 				}
 				html += '</div>';
 				
 				
@@ -237,6 +238,10 @@ function myWorkList(){
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
 				
 				html += '<h4>판매가 '+ formatComma(result[i].dealStrtPrc) +' KRW</h4>';
+				
+				html += '<h4>- <a href="javascript:myWorkMod('+result[i].workSq+')">작품수정</a></h4>';
+ 				html += '<h4>- <a href="javascript:workDetailMove('+result[i].workSq+')">상세보기</a></h4>';
+ 				
 				html += '</div>'
 				
 				html += '</div>';
@@ -311,7 +316,7 @@ function myWorkList(){
 				html += '	<div class="item-ho3 reg-div">';
 				html += '		<div class="regs" >';
 				html += '			<a href="#" class="reg-a" workSq="'+ result[i].workSq +'" onclick="dealReg(this)"><span>거래 등록</span></a>';
-				html += '			<a href="#" class="cor-a" workSq="'+ result[i].workSq +'" onclick="myWorkMod(this)"><span>작품 수정</span></a>';
+				html += '			<a href="#" class="cor-a" workSq="'+ result[i].workSq +'" onclick="myWorkMod('+ result[i].workSq +')"><span>작품 수정</span></a>';
 				html += '			<a href="javascript:workDetailMove('+ result[i].workSq +')" class="cor-a"><span>상세보기</span></a>';
 				html += '		</div>';
 				html += '	</div>';
@@ -529,6 +534,16 @@ $(document).on("click", ".heart", function(){
 		});
 		
 	}
+	
+	
+	//작품수정
+  	function myWorkMod(workSq){
+  		location.href = "/myWorkMod?workSq="+workSq;
+  	}
+  	//상세보기
+  	function workDetailMove(workSq){
+  	 	location.href="/workDetail?workSq="+workSq;
+  	}
       
 </script>
     
