--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
@@ -1478,7 +1478,7 @@
 		    		
 		    		
 		    		//modalAlertShow("작가 정보등록 완료했습니다.","");
-		    		alert("작가 정보등록 완료했습니다.")
+		    		alert("작가 신청이 완료되었습니다. \n\n 관리자 승인 후 포트폴리오 메뉴 이용이 가능합니다.")
 		    		
 		    		AuthorInfoSaveView(2);
 		    		
