호가 표 추가

--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -413,106 +413,181 @@
 					<div class="text-box1">
 						
 						<table class="tstyle4">
-							<tr>
-								<th>호수</th>
-								<th>F형 (인물)</th>
-							</tr>
-							<tr>
-								<td>0</td>
-								<td>18.0 x 14.0</td>
-							</tr>
-							<tr>
-								<td>1</td>
-								<td>22.7 x 15.8</td>
-							</tr>
-							<tr>
-								<td>2</td>
-								<td>25.8 x 17.9</td>
-							</tr>
-							<tr>
-								<td>3</td>
-								<td>27.3 x 22.0</td>
-							</tr>
-							<tr>
-								<td>4</td>
-								<td>33.4 x 24.2</td>
-							</tr>
-							<tr>
-								<td>5</td>
-								<td>34.8 x 27.3</td>
-							</tr>
-							<tr>
-								<td>6</td>
-								<td>40.9 x 31.8</td>
-							</tr>
-							<tr>
-								<td>8</td>
-								<td>45.5 x 37.9</td>
-							</tr>
-							<tr>
-								<td>10</td>
-								<td>53.0 x 45.0</td>
-							</tr>
-							<tr>
-								<td>12</td>
-								<td>60.6 x 50.0</td>
-							</tr>
-							<tr>
-								<td>15</td>
-								<td>65.1 x 53.0</td>
-							</tr>
-							<tr>
-								<td>20</td>
-								<td>72.7 x 60.6</td>
-							</tr>
-							<tr>
-								<td>25</td>
-								<td>80.3 x 65.1</td>
-							</tr>
-							<tr>
-								<td>30</td>
-								<td>90.9 x 72.7</td>
-							</tr>
-							<tr>
-								<td>40</td>
-								<td>100.0 x 80.3</td>
-							</tr>
-							<tr>
-								<td>50</td>
-								<td>116.8 x 91.0</td>
-							</tr>
-							<tr>
-								<td>60</td>
-								<td>130.3 x 97.0</td>
-							</tr>
-							<tr>
-								<td>80</td>
-								<td>145.5 x 112.1</td>
-							</tr>
-							<tr>
-								<td>100</td>
-								<td>162.2 x 130.3</td>
-							</tr>
-							<tr>
-								<td>120</td>
-								<td>193.9 x 130.3</td>
-							</tr>
-							<tr>
-								<td>150</td>
-								<td>227.3 x 181.8</td>
-							</tr>
-							<tr>
-								<td>200</td>
-								<td>259.1 x 193.9</td>
-							</tr>
-							<tr>
-								<td>300</td>
-								<td>290.9 x 218.2</td>
-							</tr>
-							<tr>
-								<td>500</td>
-								<td>333.3 x 248.5</td>
-							</tr>
+						  <tr>
+						    <td> 호수 </td>
+						    <td> F형(인물) </td>
+						    <td> P형(풍경) </td>
+						    <td> M형(해경) </td>
+						    <td> S형(정방형) </td>
+						  </tr>
+						  <tr>
+						    <td> 0 </td>
+						    <td> 18.0x14.0 </td>
+						    <td> - </td>
+						    <td> - </td>
+						    <td> - </td>
+						  </tr>
+						  <tr>
+						    <td> 1 </td>
+						    <td> 22.7x15.8 </td>
+						    <td> 22.7x14.0 </td>
+						    <td> 22.7x12.0 </td>
+						    <td> 15.8x15.8 </td>
+						  </tr>
+						  <tr>
+						    <td> 2 </td>
+						    <td> 25.8x17.9 </td>
+						    <td> 25.8x16.0 </td>
+						    <td> 25.8x14.0 </td>
+						    <td> 17.9x17.9 </td>
+						  </tr>
+						  <tr>
+						    <td> 3 </td>
+						    <td> 27.3x22.0 </td>
+						    <td> 27.3x19.0 </td>
+						    <td> 27.3x16.0 </td>
+						    <td> 22.0x22.0 </td>
+						  </tr>
+						  <tr>
+						    <td> 4 </td>
+						    <td> 33.4x24.2 </td>
+						    <td> 33.4x21.2 </td>
+						    <td> 33.4x19.0 </td>
+						    <td> 24.2x24.2 </td>
+						  </tr>
+						  <tr>
+						    <td> 5 </td>
+						    <td> 34.8x27.3 </td>
+						    <td> 34.8x24.2 </td>
+						    <td> 34.8x21.2 </td>
+						    <td> 27.3x27.3 </td>
+						  </tr>
+						  <tr>
+						    <td> 6 </td>
+						    <td> 40.9x31.8 </td>
+						    <td> 40.9x27.3 </td>
+						    <td> 40.9x24.2 </td>
+						    <td> 31.8x31.8 </td>
+						  </tr>
+						  <tr>
+						    <td> 8 </td>
+						    <td> 45.5x37.9 </td>
+						    <td> 45.5x33.4 </td>
+						    <td> 45.5x27.3 </td>
+						    <td> 37.9x37.9 </td>
+						  </tr>
+						  <tr>
+						    <td> 10 </td>
+						    <td> 53.0x45.0 </td>
+						    <td> 53.0x40.9 </td>
+						    <td> 53.0x33.4 </td>
+						    <td> 45.0x45.0 </td>
+						  </tr>
+						  <tr>
+						    <td> 12 </td>
+						    <td> 60.6x50.0 </td>
+						    <td> 60.6x45.5 </td>
+						    <td> 60.6x40.9 </td>
+						    <td> 50.0x50.5 </td>
+						  </tr>
+						  <tr>
+						    <td> 15 </td>
+						    <td> 65.1x53.0 </td>
+						    <td> 65.1x50.5 </td>
+						    <td> 65.1x45.5 </td>
+						    <td> 53.0x53.0 </td>
+						  </tr>
+						  <tr>
+						    <td> 20 </td>
+						    <td> 72.7x60.6 </td>
+						    <td> 72.7x53.0 </td>
+						    <td> 72.7x50.0 </td>
+						    <td> 60.6x60.6 </td>
+						  </tr>
+						  <tr>
+						    <td> 25 </td>
+						    <td> 80.3x65.1 </td>
+						    <td> 80.3x60.6 </td>
+						    <td> 80.3x53.0 </td>
+						    <td> 65.1x65.1 </td>
+						  </tr>
+						  <tr>
+						    <td> 30 </td>
+						    <td> 90.9x72.7 </td>
+						    <td> 90.9x65.1 </td>
+						    <td> 90.9x60.6 </td>
+						    <td> 72.7x72.7 </td>
+						  </tr>
+						  <tr>
+						    <td> 40 </td>
+						    <td> 100.0x80.3 </td>
+						    <td> 100.0x72.7 </td>
+						    <td> 100.0x65.1 </td>
+						    <td> 80.3x80.3 </td>
+						  </tr>
+						  <tr>
+						    <td> 50 </td>
+						    <td> 116.8x91.0 </td>
+						    <td> 116.8x80.3 </td>
+						    <td> 116.8x72.7 </td>
+						    <td> 91.0x91.0 </td>
+						  </tr>
+						  <tr>
+						    <td> 60 </td>
+						    <td> 130.3x97.0 </td>
+						    <td> 130.3x89.4 </td>
+						    <td> 130.3x80.3 </td>
+						    <td> 97.0x97.0 </td>
+						  </tr>
+						  <tr>
+						    <td> 80 </td>
+						    <td> 145.5x112.1 </td>
+						    <td> 145.5x97.0 </td>
+						    <td> 145.5x89.4 </td>
+						    <td> 112.1x112.1 </td>
+						  </tr>
+						  <tr>
+						    <td> 100 </td>
+						    <td> 162.2x130.3 </td>
+						    <td> 162.2x112.1 </td>
+						    <td> 162.2x97.0 </td>
+						    <td> 130.3x130.3 </td>
+						  </tr>
+						  <tr>
+						    <td> 120 </td>
+						    <td> 193.9x130.3 </td>
+						    <td> 193.9x112.1 </td>
+						    <td> 193.9x97.0 </td>
+						    <td> - </td>
+						  </tr>
+						  <tr>
+						    <td> 150 </td>
+						    <td> 227.3x181.8 </td>
+						    <td> 227.3x162.1 </td>
+						    <td> 227.3x145.5 </td>
+						    <td> 181.8x181.8 </td>
+						  </tr>
+						  <tr>
+						    <td> 200 </td>
+						    <td> 259.1x193.9 </td>
+						    <td> 259.1x181.9 </td>
+						    <td> 259.1x162.1 </td>
+						    <td> 193.9x193.9 </td>
+						  </tr>
+						  <tr>
+						    <td> 300 </td>
+						    <td> 290.9x218.2 </td>
+						    <td> 290.9x197.0 </td>
+						    <td> 290.9x181.8 </td>
+						    <td> 218.2x218.2 </td>
+						  </tr>
+						  <tr>
+						    <td> 500 </td>
+						    <td> 333.3x248.5 </td>
+						    <td> 333.3x218.2 </td>
+						    <td> 333.3x197.0 </td>
+						    <td> 248.5x248.5 </td>
+						  </tr>
 						</table>
 
 					</div>
